# ODE_Solvers

FEM/: README.md  main.cpp
lab1/: CMakeLists.txt
lab1/lib/numerical_methods/: CMakeLists.txt  numerical_methods.h
lab1/lib/numerical_methods/euler_method/: eulerMethod.cpp
lab1/lib/numerical_methods/runge-kutta_method/: rungekuttaMethod.cpp
lab1/lib/plot_tools/: plot.cpp  plot.h
lab1/src/: main.cpp
lab2/: CMakeLists.txt  README.md
lab2/plugins/: CMakeLists.txt  interfaceBasedPlugin.cpp  interfaceBasedPlugin.h  interfaceCSVPlugin.h  interfaceNumMethodPlugin.cpp  interfaceNumMethodPlugin.h  interfaceVisualizerPlugin.cpp  interfaceVisualizerPlugin.h
lab2/plugins/lib/csv_generator/: CMakeLists.txt  csvGenerator.cpp  csvGenerator.h
lab2/plugins/lib/numerical_methods/: CMakeLists.txt  numerical_methods.h
lab2/plugins/lib/numerical_methods/adams_bashforth_method/: adamsbashforthMethod.cpp
lab2/plugins/lib/numerical_methods/euler_method/: eulerMethod.cpp
lab2/plugins/lib/numerical_methods/heun_method/: heunMethod.cpp
lab2/plugins/lib/numerical_methods/runge-kutta_method/: rungekuttaMethod.cpp
lab2/plugins/lib/plot_tools/: CMakeLists.txt  plot.cpp  plot.h
lab2/src/: main.cpp  main.h
